--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
           <div class="col-lg-12" data-aos="fade-up">
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
               <h4 style="text-align:left;"><a href="https://www.orcawise.com/" target="_blank" style="color:#12d640">Orcawise</a><br> </h4>
-              <h5 style="text-align:left;">Nov 2023 - Present</h5>
+              <h5 style="text-align:left;">November 2023 - Present</h5>
               <p style="text-align:left;color:#fff"><em>Data Scientist</em></p>
               <ul style="text-align:left;">
                 <li>Developed architectural design and modular implementation of a web automation tool for extracting, Transforming, and Loading of valuable data from the Facebook platform for AI / Data Marketing.</li>
@@ -459,7 +459,7 @@
             </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.dataglacier.org/" style="color:#12d640">Data Glacier</a><br> </h4>
-                <h5 style="text-align:left;">April 2023 - Present</h5>
+                <h5 style="text-align:left;">April 2023 - September 2023</h5>
                 <p style="text-align:left;color:#fff"><em>Data Scientist</em></p>
                 <ul style="text-align:left;">
                   <li>Acquired skills in Git version control, Data Pipeline/Engineering, Data Analysis/Exploratory Data Analysis, Data Visualization, and presentation techniques.</li>
