Updated Experience Section

--- a/index.html
+++ b/index.html
@@ -444,17 +444,31 @@
         <h2>Experience</h2>
       </div>
       <div class="row">
+        <div class="col-lg-12" data-aos="fade-up">
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+              <h4 style="text-align:left;"><a href="https://sherpa.ai/" target="_blank" style="color:#12d640">Sherpa.ai</a><br> </h4>
+              <h5 style="text-align:left;">March 2024 - July 2024</h5>
+              <p style="text-align:left;color:#fff"><em>Data Scientist</em></p>
+              <ul style="text-align:left;">
+                <li>Conducted rigorous testing and validation of new features, leading to a 20% improvement in product stability.</li>
+                <li>Maintained and updated technical documentation, reducing onboarding time for new team members by 15%.</li>
+                <li>Evaluated 6+ competitor products and platforms, generating detailed reports that identified key insights and improved competitive positioning by 15%.</li>
+                <li>Analysed competitor publications to identify emerging trends and technological advancements, informing strategic decisions.</li>
+                <li>Reviewed and updated over 50 technical documents, ensuring alignment with evolving product offerings.</li>
+                <li>Proactively updated technical documentation to reflect changes and improvements within the Sherpa.ai platform.</li>
+              </ul>
+            </div>
           <div class="col-lg-12" data-aos="fade-up">
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
               <h4 style="text-align:left;"><a href="https://www.orcawise.com/" target="_blank" style="color:#12d640">Orcawise</a><br> </h4>
-              <h5 style="text-align:left;">November 2023 - Present</h5>
+              <h5 style="text-align:left;">November 2023 - March 2024</h5>
               <p style="text-align:left;color:#fff"><em>Data Scientist</em></p>
               <ul style="text-align:left;">
-                <li>Developed architectural design and modular implementation of a web automation tool for extracting, Transforming, and Loading of valuable data from the Facebook platform for AI / Data Marketing.</li>
-                <li>Successfully managed and collaborated with a dynamic team of developers to ensure the efficient implementation and optimization of the scraping tool.</li>
-                <li>Implemented algorithms and strategies to optimize data extraction, minimizing latency, and enhancing overall efficiency.</li>
-                <li>Ensured the scraper adhered to stringent security standards and compliance requirements, particularly concerning user data privacy.</li>
-                <li>Produced comprehensive technical documentation and generated regular reports on extracted data, facilitating informed decision-making in market analysis and competitive intelligence.</li>
+                <li>Developed architectural design and modular implementation of a web automation tool for ETL processes on Facebook data, improving data extraction efficiency by 30%. </li>
+                <li>Successfully managed and collaborated with a dynamic team of 8+ developers to ensure the efficient implementation and optimization of the scraping tool.</li>
+                <li>Implemented algorithms and strategies to optimize data extraction, minimizing latency by 25%, and enhancing overall efficiency.</li>
+                <li>Ensured compliance with stringent security standards and user data privacy requirements. </li>
+                <li>Produced comprehensive technical documentation and generated regular reports, supporting informed decision-making in market analysis and competitive intelligence.</li>
               </ul>
             </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
