--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1SSsQctev5pro0dgni5uNpkRanKiaIWOq/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
+          <a href="https://drive.google.com/file/d/16NtLJsYeDvF-obY8Kjc5_9lNOn3vLbnK/view?usp=drive_link" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
           <h4 class="title"><a href="https://drive.google.com/file/d/1pgrU66o63oGrG19GynaMfAQvf_zBGZzV/view?usp=sharing" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
         </div>
