--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1pgrU66o63oGrG19GynaMfAQvf_zBGZzV/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/16NtLJsYeDvF-obY8Kjc5_9lNOn3vLbnK/view?usp=drive_link" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
