--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/project/profile.jpg" class="img-fluid" alt="">
+          <img src="assets/img/project/profile.JPG" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Results-driven AI and Machine Learning professional with extensive experience in Data Science, Deep Learning, Natural Language Processing, and Federated Learning. Currently contributing as a Data Scientist at Orcawise, specializing in ETL processes for AI/Data Marketing on the Facebook platform. Proven track record in optimizing data extraction algorithms, ensuring data privacy compliance, and providing actionable insights through comprehensive technical documentation. Possesses a solid background in IT management, having served as an IT Manager at Karan Infosys, where I successfully led projects, managed IT support teams, and conducted technical training sessions. Holds an MSc in Artificial Intelligence from the University of Essex and a Bachelor's degree in Computer Engineering from Gujarat Technological University. Committed to leveraging advanced technologies to drive innovation and contribute to impactful projects.
